--- a/public/.htaccess
+++ b/public/.htaccess
@@ -1,6 +1,10 @@
 <IfModule mod_rewrite.c>
-  RewriteEngine On RewriteCond %{HTTPS} off RewriteRule ^(.*)$
-  https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301] RewriteBase /shop-new/
-  RewriteRule ^\/shop-new\/index\.html$ - [L] RewriteCond %{REQUEST_FILENAME}
-  !-f RewriteCond %{REQUEST_FILENAME} !-d RewriteRule . /shop-new/index.html [L]
+  RewriteEngine On
+  RewriteCond %{HTTPS} off
+  RewriteRule ^(.*)$https://%{HTTP_HOST}%{REQUEST_URI} [L,R=301]
+  RewriteBase /shopnew/
+  RewriteRule ^\/shopnew\/index\.html$ - [L]
+  RewriteCond %{REQUEST_FILENAME} !-f
+  RewriteCond %{REQUEST_FILENAME} !-d
+  RewriteRule . /shopnew/index.html [L]
 </IfModule>
