--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@quasar/extras": "^1.14.1",
+    "@vueuse/core": "^8.9.2",
     "axios": "^0.21.1",
     "core-js": "^3.23.3",
     "pinia": "^2.0.11",
